Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50617

Text field does not recieve emoji input from Windows 8+ touch keyboard

    XMLWordPrintable

Details

    Description

      Creating this here because Telegram Desktop is affected, and cannot create a workaround. See also: https://github.com/telegramdesktop/tdesktop/issues/1222 and https://github.com/telegramdesktop/tdesktop/issues/1549

      Simply focus on a text field, open Windows' touch keyboard, open the Emoji section, and attempt to type them. Notice nothing is typed.

      Attachments

        1. textdumper.zip
          2 kB
          Friedemann Kleint
        2. textedit_keyevents.diff
          2 kB
          Friedemann Kleint
        3. qtbug50617.zip
          2 kB
          Friedemann Kleint

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              kleint Friedemann Kleint
              supuhstar Kyli
              Votes:
              2 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes